[package]
name = "kolmogorov_smirnov"
description = "Implementation of the Kolmogorov-Smirnov statistical test as a Rust library."
version = "1.1.0"
homepage = "http://daithiocrualaoich.github.io/kolmogorov_smirnov"
repository = "https://github.com/daithiocrualaoich/kolmogorov_smirnov"
authors = ["Daithi O Crualaoich <daithi.ocrualaoich@gmail.com>"]
license = "Apache-2.0"
keywords = ["statistics"]
exclude = [
  ".dockerignore",
  ".gitignore",
  ".travis.yml",
  "Cargo.lock",
  "Dockerfile",
  "dat/*",
  "doc/*",
]

[[bin]]
name = "critical_values"

[[bin]]
name = "normal"

[[bin]]
name = "ks_f64"

[[bin]]
name = "ks_i64"

[dependencies]
rand = "0.3.12"

[dev-dependencies]
quickcheck = "0.2"
